# EchoTrade

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: backend-control.yml  create-release-tag.yml  deploy-backend.yml  deploy-dash.yml  deploy-frontend.yml  deploy-release.yml  deploy.yml  kiwka.yml
app/bot/: Makefile  pyproject.toml
app/bot/src/bot/: __init__.py  executor.py
app/core/: Dockerfile  Makefile  pyproject.toml
app/core/src/core/: __init__.py  app.py
app/core/src/core/routers/: auth.py  investment_plans.py  market.py  portfolio.py  positions.py  reviews.py  trades.py  trading.py  trading_dependencies.py  trading_proposals.py  trading_risk.py  trading_trader.py
app/core/src/core/services/: auth.py  browser_capture.py  investment_plans.py  market_data.py  portfolio.py  quote_refresh.py  review.py  trading.py
app/core/tests/: test_auth_service.py  test_portfolio_service.py  test_review_service.py  test_trading_service.py
app/dash/: .env.development  Makefile  README.md  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
app/dash/pages/: +Head.tsx  +Layout.tsx  +config.ts  global.css
app/dash/pages/access/: +Page.tsx  +config.ts
app/dash/pages/index/: +Page.tsx  +config.ts
app/dash/pages/positions/: +Page.tsx  +config.ts
app/dash/pages/reviews/: +Page.tsx  +config.ts
app/dash/src/components/: BrowserChartModal.tsx  PlanAggregateChartModal.tsx  ui.tsx
app/dash/src/components/positions/: PlanSections.tsx  WorkspaceSections.tsx  WorkspaceTables.tsx  chartActions.tsx  types.ts
app/dash/src/lib/: api.ts  auth.tsx  browserCharts.ts  format.ts  planAnalytics.ts  query.ts  reportingCurrency.tsx
app/guard/: Makefile  pyproject.toml
app/guard/src/guard/: __init__.py  evaluator.py
app/ledger/: Makefile  pyproject.toml
app/ledger/src/ledger/: __init__.py  journal.py
app/lens/: Makefile  pyproject.toml
app/lens/src/lens/: __init__.py  browser.py
app/lens/tests/: test_browser.py
app/libdb/: Makefile  pyproject.toml
app/libdb/src/libdb/: __init__.py  models.py  session.py
app/libshared/: Makefile  pyproject.toml
app/libshared/src/libshared/: __init__.py  config.py  constants.py  schemas.py
app/libworker/: Dockerfile  Makefile  pyproject.toml
app/libworker/src/libworker/: __init__.py  celery_app.py
app/libworker/src/libworker/tasks/: market.py  notifications.py  portfolio.py
app/pulse/: Makefile  pyproject.toml
app/pulse/src/pulse/: __init__.py  summary.py
app/review/: Makefile  pyproject.toml
app/review/src/review/: __init__.py  reviewer.py
app/signal/: Makefile  pyproject.toml
app/signal/src/signal/: __init__.py  analyst.py
app/wire/: Makefile  pyproject.toml
app/wire/src/wire/: __init__.py  discord.py
infra/caddy/: Caddyfile
infra/mailserver/: README.md
infra/n8n/: README.md
infra/n8n/workflows/: daily-portfolio-summary.json  opportunity-scan-mwf.json  urgent-alerts.json  weekly-review.json
make/: python.mk
