[project]
name = "core"
version = "0.1.0"
description = "EchoTrade backend API — central orchestration service"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1",
    "fastapi>=0.111",
    "httpx>=0.27",
    "pymongo>=4.8",
    "redis>=5.0",
    "uvicorn[standard]>=0.30",
    "libshared",
    "libdb",
    "libworker",
    "guard",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.uv.sources]
libshared = { workspace = true }
libdb     = { workspace = true }
libworker = { workspace = true }
