[project]
name = "ledger"
version = "0.1.0"
description = "EchoTrade decision and trade journal"
requires-python = ">=3.12"
dependencies = [
    "libshared",
    "libdb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledger"]

[tool.uv.sources]
libshared = { workspace = true }
libdb     = { workspace = true }
