[project]
name = "lens"
version = "0.1.0"
description = "EchoTrade Playwright-powered browser research module"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
    "libshared",
    "libdb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lens"]

[tool.uv.sources]
libshared = { workspace = true }
libdb     = { workspace = true }
