[project]
name = "libdb"
version = "0.1.0"
description = "EchoTrade database library — SQLAlchemy models and session management"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "libshared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libdb"]

[tool.uv.sources]
libshared = { workspace = true }
