[project]
name = "libshared"
version = "0.1.0"
description = "EchoTrade shared library — models, schemas, config, constants"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libshared"]
