[project]
name = "libworker"
version = "0.1.0"
description = "EchoTrade worker library — Celery app and shared task definitions"
requires-python = ">=3.12"
dependencies = [
    "celery[librabbitmq]>=5.4",
    "pymongo>=4.8",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "watchfiles>=1.1.1",
    "libshared",
    "libdb",
    "lens",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libworker"]

[tool.uv.sources]
libshared = { workspace = true }
libdb = { workspace = true }
lens = { workspace = true }
