[project]
name = "review"
version = "0.1.0"
description = "EchoTrade post-trade review engine"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "libshared",
    "libdb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review"]

[tool.uv.sources]
libshared = { workspace = true }
libdb     = { workspace = true }
