[project]
name = "signal"
version = "0.1.0"
description = "EchoTrade AI analyst and signal generation service"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "openai>=1.30",
    "libshared",
    "libdb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal"]

[tool.uv.sources]
libshared = { workspace = true }
libdb     = { workspace = true }
