[project]
name = "wire"
version = "0.1.0"
description = "EchoTrade Discord notification layer"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "libshared",
]

[project.scripts]
test-discord = "wire.discord:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wire"]

[tool.uv.sources]
libshared = { workspace = true }
